<resources>
    <string name="app_name">StarTalk</string>
    <string name="profile_setting">프로필 관리</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_id">ID</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Password Confirm</string>
    <string name="btn_create_an_account">Create an account</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
</resources>
